@@ -13,3 +13,4 @@ add_subdirectory(ClientLib)
 add_subdirectory(Tester)
 add_subdirectory(Viewer)
 add_subdirectory(Benchmark)
+add_subdirectory(Grapher)
