@@ -1,0 +1,9 @@
+set term png truecolor enhanced size 800,600
+set out "graphs.png"
+
+f1(x) = erf(x/(sqrt(2)*a1))-sqrt(2/pi)*(x*exp(-x**2/(2*a1**2)))/a1
+g1(x) = sqrt(2/pi)*((x**2)*exp(-x**2/(2*a1**2)))/(a1**3)
+fit f1(x) "graphdata.txt" via a1
+plot "graphdata.txt", \
+	f1(x), \
+	g1(x)
